<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <!-- Name, about, credits and versioning -->
    <string name="app_name">BitcoinSpinner</string>
    <string name="about_title">About BitcoinSpinner</string>
    <string name="about_text">V.: %1$s\nBitcoinSpinner is a light-weight, secure, and user friendly Bitcoin client for Android, which is built on top of the BCCAPI.\nBitcoinSpinner is not a Bitcoin bank. All your funds are secured by private keys in app-private storage on your Android device.\n\nPlease note that this is a beta release, use at your own risk.</string>
    <string name="credits_text">Thanks  to:\n - Jan(bccapi)\n - Kevin(Fr. trans.)\n - Mats Henricson(Sv. trans.)\n - Gerhard(De. trans.)\n - Manuel Polo(Es. trans.)\n - Troels(Da. trans.)</string>
    <!-- Menu -->
    <string name="about_menu">About BS</string>
    <string name="credits_menu">Credits</string>
    <string name="settings_menu">Settings</string>
    <!-- Startup -->
    <string name="startup_dialog_text">Please wait...</string>
    <!-- Backup and Restore -->
    <string name="backup_dialog_text">You are about to display a QR code which can be used to restore your wallet on a different device.\n\nTake a picture of it and/or print it out on Paper.\n\nWarning, this QR code enables anyone who scans it to take possession of the funds controlled by this device.\n\nDo you want to proceed?</string>
    <string name="restore_complete_dialog_text">Restore complete</string>
    <string name="restore_dialog_coins">You should not restore a backup as your wallet contains funds.\n\nPlease send your funds elsewhere before proceeding.\n\nDo you want to restore a backup anyway?</string>
    <string name="restore_dialog_no_coins">You are about to restore your wallet from a backup.\n\nThis is done by scanning a previously generated backup QR code or from a backup code on your clipboard.</string>
    <string name="restore_dialog_title">Restoring</string>
    <!-- Preferences -->
    <string name="pref_network_fee">Transaction fee</string>
    <string name="prefs_backup_title">Backup wallet</string>
    <string name="prefs_category_backupandrestore">Backup and Restore</string>
    <string name="prefs_category_bitcoinwalletprefs">BitcoinSpinner preferences</string>
    <string name="prefs_restore_title">Restore wallet</string>
    <!-- Transaction -->
    <string name="no_transactions">No transactions</string>
    <string name="received_from">Received from:</string>
    <string name="sent_to">Sent to:</string>
    <string name="sent_to_yourself">Sent to yourself:</string>
    <string name="transaction_history">Transaction History</string>
    <!-- Common -->
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="please_wait">Please wait...</string>
    <string name="try_again">Try again?</string>
    <!-- Calculation and sending of bitcoins -->
    <string name="calculating_fee">Calculating network fee</string>
    <string name="calculating_fee_wait">Please wait while network fee is being calculated...</string>
    <string name="calculating_fee_done">Network fee has been calculated to %s BTC.\n\nProceed?</string>
    <string name="send_bitcoins">Send Bitcoins</string>
    <string name="sending_bitcoins">Sending Bitcoins</string>
    <string name="sending_bitcoins_wait">Please wait while sending bitcoins</string>
    <!-- Sharing -->
    <string name="share_bitcoin_address">Share your bitcoin address...</string>
    <!-- Info -->
    <string name="transaction_fee_text">A Bitcoin transaction fee of 0.0005 BTC is automatically added to your transaction.%1$sinfo...%2$s</string>
    <string name="transaction_fee_text_info">By adding a small transaction fee your transaction is guaranteed to be propagated through the network and accepted by Bitcoin miners. The size of the transaction fee is typically 0.0005 BTC, but may be larger if your transaction is larger than 1000 bytes. If your transaction requires a fee larger than 0.0005 BTC you will get prompted to confirm whether you would like to send it.</string>
    <string name="your_balance">Your balance:</string>
    <string name="your_bitcoin_address">Your Bitcoin address:</string>
    <!-- Warnings -->
    <string name="install_qr_scanner">Please install ZXing QR-code scanner or Goggles!</string>
    <string name="need_connection">You need to be connected to the internet.</string>
    <!-- Errors -->
    <string name="invalid_address_for_testnet">Invalid address for testnetwork</string>
    <string name="invalid_address_for_prodnet">Invalid address</string>
    <string name="restore_invalid_qr_code">Invalid QR-code!</string>
    <!-- NEW STRINGS -->
    <string name="prefs_choose_default_locale">Language</string>
    <string name="pay_to">Pay to:</string>
    <string name="address">Address</string>
    <string name="private_key">Private Key</string>
    <string name="bitcoinspinner_backup">BitcoinSpinner Backup</string>
    <string name="bitcoin_address">Bitcoin Address</string>
    <string name="amount_to_pay">Amount to pay:</string>
    <string name="prefs_category_advanced">Advanced</string>
    <string name="prefs_transaction_history_size">Transaction history size</string>
    <string name="pref_export_private_key_title">Export private key</string>
    <string name="export_private_key_dialog_text">Warning. You are about to export the private key that controls all the bitcoins managed by BitcoinSpinner.\n\nAnyone who gains access to this key can take possession of the bitcoins it controls.\n\nDo you want to continue?</string>
    <string name="beta_warning">This is a beta release. Use at your own risk.</string>
    <string name="no_network">No network connectivity.</string>
    <string name="unexpected_error">An unexpected error occurred. Please try again.</string>
    <string name="unknown">Unknown</string>
    <string name="donations_appreciated">BitcoinSpinner and the servers it depends on are provided for free.\n\nPlease help us continue improving a great free Bitcoin wallet.\n\nDo you want to give a small donation?</string>
    <string name="coins_on_their_way">Coins on their way to you:</string>
    <string name="donate_menu">Donate</string>
    <string name="initializing_bitcoinspinner">Initializing BitcoinSpinner</string>
    <string name="unconfirmed_from">Receiving from (unconfirmed):</string>
    <string name="unconfirmed_to">Sending to (unconfirmed):</string>
    <string name="invalid_amount">Invalid amount </string>
    <string name="amount_too_large">Amount too large</string>
    <string name="address_book">Address Book</string>
    <string name="unconfirmed_received_with">Receiving with (unconfirmed):</string>
    <string name="received_with">Received with:</string>
    <string name="address_book_menu">Address Book</string>
    <string name="select_recipient">Select Recipient</string>
    <string name="add_address_title">Add Address to Address Book</string>
    <string name="add_address_description">Select a recent receiver from the list below or scan a Bitcoin address QR-code.</string>
    <string name="add_address">Add Address</string>
    <string name="recent_receivers">Recent Receivers</string>
    <string name="none">None</string>
    <string name="name">Name</string>
    <string name="set_name_title">Enter Address Name</string>
    <string name="delete_address_confirmation">Are you sure that you want to delete this address from your address book?</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="address_book_empty">Your address book is empty.</string>
    <string name="invalid_value">Invalid Value</string>
    <string name="delete_address">Delete Address</string>
    <string name="show_qr_code">Show QR-code</string>
    <string name="edit_address">Edit Address</string>
    <string name="copy_to_clipboard">Copy to clipboard	</string>
    <string name="scan_qr_code">Scan QR-code</string>
    <string name="worth_about">worth about %s (MtGox)</string>
    <string name="prefs_currency">Local currency</string>
    <string name="buy_coins_menu">Get Bitcoins</string>
    <string name="prefs_category_pin">PIN Settings</string>
    <string name="pref_clear_pin">Clear PIN code</string>
    <string name="pref_set_pin">Set PIN Code</string>
    <string name="pin_invalid_pin">Invalid PIN code</string>
    <string name="pin_enter_pin">Enter PIN Code</string>
    <string name="pin_cleared">PIN code cleared</string>
    <string name="pin_enter_new_pin">Enter new PIN Code</string>
    <string name="pin_codes_dont_match">The two PIN codes do not match</string>
    <string name="pin_set">PIN code set</string>
    <string name="pin_confirm_pin">Confirm PIN Code</string>
    <string name="no_server_connection">Server not responding</string>
    <string name="initializing">Initializing</string>
    <string name="restore_from_qr_code">Restore from QR-code</string>
    <string name="restore_from_clipboard">Restore from clipboard</string>
    <string name="restore_method">Choose Restore Method</string>
    <string name="backup_warning">To secure your funds you should make a backup. Just click your Options button and go to Settings and Backup. You only have to do this once.</string>
    <string name="disable_notification">Disable this notification.</string>
    <string name="backup_warning_title">Backup Your Wallet</string>
    <string name="insufficient_funds_for_fee">This transaction has a lot of small inputs and will require at least %s BTC in miner fees, which you cannot afford.</string>
    <string name="insufficient_funds">Including miner fee of %1$s BTC this transaction will cost %2$s BTC, which you cannot afford.</string>
    <string name="coins_you_are_sending">Coins you are sending:</string>
    <string name="key_vulnerability_title">Critical Security Vulnerability</string>
    <string name="key_vulnerability_message1">A critical security vulnerability has been identified on Android, which makes private keys created or used by Android wallets vulnerable.\n\nYou are urged to take immediate action.</string>
    <string name="key_vulnerability_link1"> \nMore details here.\n </string>
    <string name="key_vulnerability_message2">You should either:</string>
    <string name="key_vulnerability_link2"> \nMigrate to the Mycelium Bitcoin Wallet\n </string>
    <string name="key_vulnerability_message3">Install Mycelium Bitcoin Wallet and move your funds to one of its addresses. Mycelium Bitcoin Wallet is the successor of BitcoinSpinner, and will eventually replace it entirely.\n\nOR\n\nContinue using BitcoinSpinner:\n  1. Move your funds to another wallet and wait for 6 confirmations\n  2. Uninstall BitcoinSpinner\n  3. Re-install BitcoinSpinner, this creates new strong keys\n  4. Move funds back</string>
    <string name="key_vulnerability_i_got_it">I got it, don\'t show this message again</string>
</resources>
