<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/about"
        android:icon="@drawable/tab_info_dark"
        android:title="@string/about_menu"/>

    <item
        android:id="@+id/settings"
        android:icon="@drawable/tab_info_dark"
        android:title="@string/settings_menu"/>

    <item
        android:id="@+id/address_book"
        android:icon="@drawable/tab_info_dark"
        android:title="@string/address_book_menu"/>

    <item
        android:id="@+id/donate"
        android:icon="@drawable/tab_info_dark"
        android:title="@string/donate_menu"/>

    <item
        android:id="@+id/buy_coins"
        android:icon="@drawable/tab_info_dark"
        android:title="@string/buy_coins_menu"/>

</menu>