<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fadeScrollbars="false"
    android:scrollbars="vertical" >

   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="10dp" >
        </View>

        <TextView
            android:id="@+id/tvMessage1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill_vertical"
            android:text="@string/key_vulnerability_message1"
            android:textColor="@color/White"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvLink1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="fill_vertical"
            android:text="@string/key_vulnerability_link1"
            android:textColor="@color/White"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvMessage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill_vertical"
            android:text="@string/key_vulnerability_message2"
            android:textColor="@color/White"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/tvLink2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill_vertical"
            android:text="@string/key_vulnerability_link2"
            android:textColor="@color/White"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvMessage3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill_vertical"
            android:text="@string/key_vulnerability_message3"
            android:textColor="@color/White"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="10dp" >
        </View>

        <CheckBox
            android:id="@+id/cb_disable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_vulnerability_i_got_it" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="10dp" >
        </View>

        <Button
            android:id="@+id/btOK"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/ok"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="10dp" >
        </View>
    </LinearLayout>

</ScrollView>