<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_balance"
    android:layout_width="fill_parent"
    android:layout_height="85dp"
    android:background="@drawable/infobox"
    true="" >

    <TextView
        android:id="@+id/tv_your_balance_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/your_balance"
        android:textColor="@color/DarkSlateGray" />

    <TextView
        android:id="@+id/tv_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_your_balance_text"
        android:layout_marginTop="0dp"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textColor="@color/Black"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/tv_usd_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_balance"
        android:layout_marginTop="-10dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/DarkSlateGray" />

    <LinearLayout
        android:id="@+id/ll_ontheway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_usd_value"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/tv_estimated_on_the_way"
            android:singleLine="true"
            android:text="@string/coins_on_their_way"
            android:textColor="@color/DarkSlateGray" />

        <TextView
            android:id="@+id/tv_estimated_on_the_way"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/DarkSlateGray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_sending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_ontheway"
        android:layout_marginTop="-1dp"
        android:layout_centerHorizontal="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/tv_sending"
            android:singleLine="true"
            android:text="@string/coins_you_are_sending"
            android:textColor="@color/DarkSlateGray" />

        <TextView
            android:id="@+id/tv_sending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/DarkSlateGray" />
    </LinearLayout>

    
    <View
        android:id="@+id/v_balance_update"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/infobox_gray"
        android:visibility="invisible" />

    <View
        android:id="@+id/v_balance_no_conn"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/infobox_gray"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/pb_balance_update"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible" />

</RelativeLayout>